<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/card_add_workday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/holo_blue_bright"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <TextView
                    android:id="@+id/header_add_workday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/heading_add_workday"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:id="@+id/form_add_workday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/header_add_workday"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/field_starttime_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_starttime"/>

                    <EditText
                        android:id="@+id/field_starttime_date_output"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:hint="@string/output"
                        tools:text="your starting time workday today"/>

                    <EditText
                        android:id="@+id/field_endtime_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_endtime"/>

                    <EditText
                        android:id="@+id/field_endtime_date_output"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:hint="@string/output"
                        tools:text="the time you finished working today"/>

                </LinearLayout>


                <Button
                    android:id="@+id/button_sign_in"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/button_add_workday"
                    android:layout_toLeftOf="@+id/button_add_workday"
                    android:layout_toStartOf="@+id/button_add_workday"
                    android:text="@string/sign_in"/>

                <Button
                    android:id="@+id/button_add_workday"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/form_add_workday"
                    android:text="@string/add_workday"/>

            </RelativeLayout>
        </android.support.v7.widget.CardView>


    </LinearLayout>

</ScrollView>